Fixed odd scrollbar issue

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -4,6 +4,7 @@ body {
     min-height: 100vh;
     position: relative;
     padding-bottom: 90px;
+    overflow-x: hidden;
 }
 
 .foot {
