--- a/styles/recommendations.css
+++ b/styles/recommendations.css
@@ -5,6 +5,7 @@ body {
     min-height: 100vh;
     position: relative;
     padding-bottom: 90px;
+    overflow-x: hidden;
 }
 
 .foot {
