--- a/styles/register.css
+++ b/styles/register.css
@@ -5,6 +5,7 @@ body {
 	min-height: 100vh;
     position: relative;
     padding-bottom: 90px;
+    overflow-x: hidden;
 }
 
 input[type=text], input[type=password], input[type=email] {
